# smt-logger

./: .gitignore  CMakeLists.txt  README.md
include/: smt_logger.h
include/spdlog/: logger-inl.h  spdlog.h  tweakme.h
include/spdlog/details/: os-inl.h
include/spdlog/fmt/bundled/: chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  locale.h  ostream.h  printf.h  ranges.h
include/spdlog/sinks/: syslog_sink.h  systemd_sink.h
src/: CMakeLists.txt  smt-loggerConfig.cmake.in  smt_logger.cpp  smt_logger.h  smtloggerConfig.cmake.in
src/spdlog/details/: log_msg-inl.h
test/: CMakeLists.txt  test.cpp
testcase/: CMakeLists.txt  testcase.cpp
tests/: CMakeLists.txt
